Small fixes and jar creation